deploy/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: task-app
  labels:
    app.kubernetes.io/part-of: diploma-task-app
